<resources>
    <!--APP名字-->
    <string name="app_name">工业印象</string>
    <!--主页-->
    <string name="recommend">推荐</string>
    <string name="follow">关注</string>
    <string name="follow_page_no_follow">您目前还没有关注任何文章</string>
    <string name="login">登陆</string>
    <!--登陆-->
    <string name="login_fabulous">收到的赞赏</string>
    <string name="login_fabulous_">_</string>
    <string name="login_fensi">我的粉丝</string>
    <string name="login_fensi_">_</string>
    <string name="login_message">我的消息</string>
    <string name="login_topic">全部话题</string>
    <string name="login_see">我的文章</string>
    <string name="login_self">我的关注</string>
    <string name="login_share">分享APP</string>
    <!--选择登陆-->
    <string name="select_login_textview">选择登陆方式</string>
    <!--推荐-->
    <string name="recommend_follow">关注</string>
    <string name="fault_tolerant_page">哎呀!网络好像有点问题,请检查您的网络,重新加载</string>
    "
    <!--详情-->
    <string name="fire">确定</string>
    <string name="cancel">取消</string>
    <string name="send_TV">发送</string>
    <string name="edit_send_hint">写下你的评论...</string>
    <string name="des_eidt_TV">如果觉得我的文章对您有用,请随意赞赏,您的鼓励将支持我继续创作</string>
</resources>
