<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@mipmap/background_setting_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_user_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/img_setting" />

        <ImageView
            android:id="@+id/login_user_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_portrait_default" />

        <TextView
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/red" />
        <!--收到的赞赏 我的粉丝-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login_fabulous" />

                    <TextView
                        android:id="@+id/login_text_fabulous"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/login_fabulous_" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login_fensi" />

                    <TextView
                        android:id="@+id/login_text_fensi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/login_fabulous_" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!--列表-->
        <TextView
            android:id="@+id/login_message"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:drawableLeft="@mipmap/img_message"
            android:drawablePadding="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/login_message" />

        <TextView
            android:id="@+id/login_topic"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@mipmap/img_topic"
            android:drawablePadding="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/login_topic" />

        <TextView
            android:id="@+id/login_see_hear"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@mipmap/img_see_hear"
            android:drawablePadding="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/login_see" />

        <TextView
            android:id="@+id/login_self_attention"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@mipmap/img_self_attention"
            android:drawablePadding="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/login_self" />

        <TextView
            android:id="@+id/login_share_drawable_left"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@mipmap/img_share_drawable_left"
            android:drawablePadding="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="25dp"
            android:text="@string/login_share" />


    </LinearLayout>

    <ImageView
        android:id="@+id/login_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/img_dismiss" />
</RelativeLayout>
